# Cloud-PE-One

./: NOTICE  README (2).md  README.md  README_en.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
docs/: README.md
src/: App.css  App.tsx  download.rs  downloader.rs  emoji.css  index.css  main.rs  main.tsx  updater.rs  usb_api.rs
src-tauri/: 2  Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: download.rs  download_file.rs  downloader.rs  lib.rs  main.rs  plugins.rs  updater.rs  usb_api.rs
src/api/: bootDriveUpdateApi.ts  downloadApi.ts  isoApi.ts  notificationApi.ts  pluginsApi.ts  unifiedApi.ts  updateApi.ts
src/components/: BootDriveUpdateBanner.tsx  Layout.tsx  LoadingScreen.tsx  NotificationBanner.tsx  UpdateNotification.tsx
src/components/ui/: alert.tsx
src/hooks/: useNotification.ts  useUpdateCheck.ts
src/pages/: CreatStartupDisk.tsx  CreateIsoPage.tsx  DocsPage.tsx  HomePage.tsx  PlaceholderPage.tsx  PluginsManagePage.tsx  PluginsMarketPage.tsx  SettingsPage.tsx  UpgradeBootDrivePage.tsx
src/utils/: AppContext.tsx  cacheService.ts  devtools.ts  system.ts  tauriApiWrapper.ts  theme.ts
ventoy/: log.txt
