[package]
name = "cloud-pe-one"
version = "0.1.0"
description = "Cloud-PE One Client"
authors = ["Cloud-PE Dev"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
http-downloader = { version = "0.3.2" ,features = ["all-extensions"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
sysinfo="0.30.13"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.4"
futures-util = "0.3"
lazy_static = "1.4"
urlencoding = "2.1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.0"
anyhow = "1.0"

# HTTP服务器
warp = "0.3"
