[package]
name = "cloud-pe-one"
version = "1.6.0"
description = "Cloud-PE One Client"
authors = ["Cloud-PE Dev"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
winres = "0.1"

[dependencies]
http-downloader = { version = "0.3.2" ,features = ["all-extensions"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.5.0", features = ["devtools"] }
tauri-plugin-log = "2.0.0-rc"
sysinfo="0.30.13"
reqwest = { version = "0.11", features = [ "json", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.4"
futures-util = "0.3"
lazy_static = "1.4"
urlencoding = "2.1"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
winapi = { version = "0.3", features = [
    "winnt",
    "fileapi",
    "handleapi",
    "winbase",
    "minwindef",
    "winioctl",
    "ioapiset",
    "winerror",
    "winreg",
    "winuser"
] }
zip = "0.6"
encoding_rs = "0.8"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader", 
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Wdk_System_SystemServices"
] }
hidapi = "2.4"  # For USB device enumeration
percent-encoding = "2.3"
